--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
+  <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="experience.css">
@@ -60,16 +61,15 @@
     <div class="timeline">
       <div class="container left">
         <div class="content">
-          <h2>March 2025</h2>
-          <p>I was honored to be awarded first place for the Pythagorean Prize; this award goes to the top three math students at Schoolcraft. I also had
-          the opportunity to present at STEAM @ Schoolcraft and I received first place for my program that detects brain tumors. </p>
+          <h2>June 2025</h2>
+          <p>I worked as a IT an cybersecurity intern, where I spent a summer building automation and analytics tools, from sentiment analysis models to workflow optimizations that saved time and reduced complexity.</p>
         </div>
       </div>
       <div class="container right">
         <div class="content">
-          <h2>Sept. 2024</h2>
-          <p>Started Future Coders Foundation with the goals of providing laptops to students interested in coding. I had the opportunity to grow this 
-          project through UofM's optiMize program.
+          <h2>March 2025</h2>
+          <p>I was honored to be awarded first place for the Pythagorean Prize; this award goes to the top three math students at Schoolcraft. I also had
+          the opportunity to present at STEAM @ Schoolcraft and I received first place for my program that detects brain tumors.
           </p>
         </div>
       </div>
