--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
   <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
-
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
@@ -85,7 +84,7 @@
           <div class="overlay-text">Hi! I'm Sinclair</div>
           <div class="overlay-text2">Overview</div>
 
-          <div class="overlay-text">  🎓I am a sophomore CS student studying at Schoolcraft College who is transferring to The University of Michigan in the Fall
+          <div class="overlay-text">  🎓I am a junior CS student studying at The University of Michigan
           </div>
           <div class="overlay-text"> 💡 I have three years of coding experience in Python and C++ with goals to make impactful coding solutions
           </div>
