--- a/experience.html
+++ b/experience.html
@@ -62,7 +62,7 @@
       <div class="container left">
         <div class="content">
           <h2>June 2025</h2>
-          <p>I worked as a IT an cybersecurity intern, where I spent a summer building automation and analytics tools, from sentiment analysis models to workflow optimizations that saved time and reduced complexity.</p>
+          <p>I worked as a IT and cybersecurity intern, where I spent a summer building automation and analytics tools, from sentiment analysis models to workflow optimizations that saved time and reduced complexity.</p>
         </div>
       </div>
       <div class="container right">
