--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
           </div>
           <div class="overlay-text"> 💡 I have three years of coding experience in Python and C++ with goals to make impactful coding solutions
           </div>
-          <div class="overlay-text"> 👨‍💻 My long term goal is to get a masters in AI and pursue a career in AI/ML development 
+          <div class="overlay-text"> 👨‍💻 My long term goal is to go to grad school for Computer Science
           </div>
-          <div class="overlay-text"> 😇 I always remember to thank my chatbots
+          <div class="overlay-text"> 😇 If you had 4 elevators and 60 floors, how can you program them to maximize efficiency? 5?
           </div>
         </div>
 
