Update elevator programming question for clarity

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="overlay-text"> 👨‍💻 My long term goal is to go to grad school for Computer Science
           </div>
-          <div class="overlay-text"> 😇 If you had 4 elevators and 60 floors, how can you program them to maximize efficiency? 5?
+          <div class="overlay-text"> 😇 If you had 4 elevators and 60 floors, how can you program them to maximize efficiency? 5 elevators?
           </div>
         </div>
 
