Rearrange work experience in index.html
Reordered internship and work experience details for clarity.

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <p>
   My current research uses wearable and EHR data to study how machine learning models’ reliability shifts as conditions change.
   This summer, I’m planning to work with the Harvard AI &amp; Robotics Lab, where I hope to expand into computer vision and robotics.
-  I also work as an IT intern at DexKo Global, which has introduced me to cybersecurity, threat response, and help-desk work.
-  This summer, I’ll be joining Boston Scientific as an AIS R&amp;D Security Engineer Intern.
+  I’ll also be joining Boston Scientific as an AIS R&amp;D Security Engineer Intern.
+  I currently work as an IT intern at DexKo Global, which has introduced me to cybersecurity, threat response, and help-desk work.
   Overall, I’m excited to keep building skills that connect research to real healthcare technology.
 </p>
 
@@ -127,7 +127,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         <li><b>2025 Pythagorean Prize Winner</b> — awarded to the top math students at Schoolcraft College.</li>
         <li><b>2025 MichMATYC Karen Sharp Scholarship Winner</b> — awarded to an outstanding community college math student in Michigan.</li>
         <li><b>2025 STEAM@Schoolcraft Conference</b> — presented tumor detection program at Schoolcraft's STEAM conference and received first place.</li>
-        <li><b>President, Math &amp; Physics Club</b> — led meetings and supported peer learning/community.</li>
     </div>
   </div>
 </div>
