--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   school to dive deeper into this work.</h5>
 
 <p>
-  My current research uses wearable and EHR data to study how machine learning models’ reliability shifts as conditions change.
+  My current research uses wearable and EHR data to study how machine learning models’ reliability shifts if patients experience HR-baseline changes.
   This summer, I’m planning to work with the Harvard AI &amp; Robotics Lab, where I hope to expand into computer vision and robotics.
   I’ll also be joining Boston Scientific as an AIS R&amp;D Security Engineer Intern.
   I currently work as an IT intern at DexKo Global, which has introduced me to cybersecurity, threat response, and help-desk work.
