Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="google-site-verification" content="XWJplMbT9SrV5I54sLQg3IQaCzcvuPB-zRAojK4nXN4" />
   <link rel="stylesheet" href="style.css">
 </head>
 
