--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
   <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
-  <meta name="description" content="Sinclair Hansen's Epic Portfolio">
+  <meta name="description" content="Computer Science student at the University of Michigan focused on machine learning, healthcare research, and applied AI. Portfolio of projects, research, and writing by Sinclair Hansen.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="google-site-verification" content="XWJplMbT9SrV5I54sLQg3IQaCzcvuPB-zRAojK4nXN4" />
   <link rel="stylesheet" href="style.css">
